--- a/clustering jokes.ipynb
+++ b/clustering jokes.ipynb
@@ -1173,7 +1173,7 @@
    "id": "20440e33",
    "metadata": {},
    "source": [
-    "If you're on reddit and want to post the highest possible scoring joke, I would suggest posting a joke in the format of \"A man walks into a bar...\". While it seems like most jokes tend to score similarly, this type of joke would help maximize your score. If you want to get even higher scores, I would suggest writing a joke that doesn't fit any of the categories mentioned above."
+    "If you're on reddit and want to post the highest possible scoring joke, I would suggest posting a joke in the format of \"A man walks into a bar...\". While it seems like most jokes tend to score similarly, this type of joke would help maximize your score."
    ]
   }
  ],
